# desafio-capgemini

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
apps/: README.md  project.json  pyproject.toml
apps/ai/: ENV_VARIABLES.md  example_usage.py  hello.py  main.py  project.json  pyproject.toml
apps/ai/examples/: rag_usage.py
apps/ai/src/agent/: __init__.py  agent.py
apps/ai/src/tools/: __init__.py  csv_analyzer.py  rag.py  web_search.py
apps/ai/tests/: test_api.py
apps/desafio-capgemini/: package.json  tsconfig.json
apps/desafio-capgemini/src/app/: page.tsx
apps/rag/: .coverage  README.md  main.py  project.json  pyproject.toml
apps/rag/src/: csv_chunk_processor.py
apps/rag/src/archives/: articles.csv  documents.csv  products.csv
apps/rag/tests/: __init__.py  conftest.py  run_tests.py  test_rag_client.py  test_rag_pytest.py
apps/tests/: test_hello.py
apps/ui/: package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
apps/ui/src/app/: global.css  layout.tsx  page.tsx
apps/ui/src/app/__tests__/: page.test.tsx
apps/ui/src/app/api/ai/: route.ts  router.ts
apps/ui/src/app/api/tests/: route.ts
apps/ui/src/components/: message.tsx  search_bar.tsx
apps/ui/src/components/__tests__/: message.test.tsx
apps/ui/src/mock/: mock_messages.ts
apps/ui/src/test/: setup.ts
apps/ui/src/type/: message.ts
