[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.6.0",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "duckdb>=1.1.3",
    "fastapi>=0.117.1",
    "httpx>=0.27.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-ollama>=0.3.8",
    "langgraph>=0.6.7",
    "pandas>=2.2.2",
    "uvicorn>=0.37.0",
]
